# casual-dogma

./: .env.example  .gitignore  LICENSE  README.md  launcher.config.example.json  restart-server.bat  server_blueprint.py  setup_discord.py  start-server.bat  stop-server.bat
Launcher/: App.xaml  App.xaml.cs  CredentialProtector.cs  GameConfigWriter.cs  Launcher.csproj  LauncherConfig.cs  MainWindow.xaml  MainWindow.xaml.cs  PatchAuth.cs  Patcher.cs
Launcher/tools/: make-manifest.ps1
LauncherShim/: LauncherShim.csproj  Program.cs
Server/: Arrowgene.DragonsDogmaOnline.sln  Dockerfile  README.adoc  psql.Dockerfile  verify-supply-cache.ps1
Server/Arrowgene.Ddon.Cli/: Arrowgene.Ddon.Cli.csproj  ErrorMonitor.cs  Program.cs  Setting.cs
Server/Arrowgene.Ddon.Client/: Arrowgene.Ddon.Client.csproj
Server/Arrowgene.Ddon.Database/: Arrowgene.Ddon.Database.csproj  DdonDatabaseBuilder.cs  IDatabase.cs
Server/deploy/: deploy.sh
client-mod/: DIAGNOSTICS.md  LOSS_GAUGE.md  RE_OFFLINE_GUIDE.md  SKILL_RE_NOTES.md  build.ps1  diagnose_levelsync.cmd  diagnose_levelsync.py  disasm.py  disasm_off.py  find_classreg.py  find_level.py  find_level_ptr.py  find_owner.py  find_skill_static.py  find_status.py  finddelta.py  inject.ps1  monitor.ps1
client-mod/ddon_mod/: Cargo.toml
client-mod/ddon_mod/src/: bind.rs  call.rs  config.rs  diag.rs  guardpage.rs  hooks.rs  hwbp.rs  lib.rs  log.rs  probe.rs  recoverable_hp.rs  skill.rs
client-mod/inject/: Cargo.toml
client-mod/inject/src/: main.rs
client-mod/synchook/: Cargo.toml
client-mod/synchook/src/: lib.rs
level-sync/: LICENSE  README.md  ZONE_LIST.md  generate_zone_list.py
(+1672 files in other folders)
