[package]
name = "ddon_mod"
version = "0.1.0"
edition = "2021"
description = "DDON in-process client mod: palette-free custom skill binding"

[lib]
name = "ddon_mod"
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
