[package]
name = "inject"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inject"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
